--- a/src/components/ContactHero/ContactHero.module.css
+++ b/src/components/ContactHero/ContactHero.module.css
@@ -2,11 +2,7 @@
   position: relative;
   width: 100%;
   overflow: hidden;
-  background: linear-gradient(
-    135deg,
-    rgba(252, 210, 205, 1) 15%,
-    rgba(189, 183, 213, 1) 65%
-  );
+  background-color: var(--blue);
 }
 
 .container::after {
@@ -34,12 +30,13 @@
 
 .heading {
   text-align: center;
+  color: var(--white);
 }
 
 .heading2 {
+  color: var(--white);
   font-family: var(--BoogyBrutPoster);
   font-size: 6rem;
-  
 }
 
 .copy,
@@ -49,6 +46,7 @@
   margin-right: auto;
   line-height: 1.4em;
   font-size: 2rem;
+  color: var(--white);
 }
 
 .span {
@@ -96,7 +94,7 @@
   }
 }
 
-@media screen and (max-width: 968px) {
+@media screen and (max-width: 1068px) {
   .copy,
   .span {
     width: 80%;
@@ -107,17 +105,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
-  .container {
-    padding-bottom: 5rem;
-  }
-}
-
 @media screen and (max-width: 568px) {
-  .container {
-    padding-bottom: 5rem;
-  }
-
   .copy,
   .span {
     width: 100%;
@@ -131,8 +119,4 @@
     width: 100%;
     grid-template-columns: repeat(1, 1fr);
   }
-
-  /* .box {
-    display: none;
-  } */
 }
