--- a/src/components/FinalCTA/FinalCTA.module.css
+++ b/src/components/FinalCTA/FinalCTA.module.css
@@ -1,9 +1,3 @@
-.content {
-  background-color: var(--blue);
-  padding: 3rem;
-  border-radius: 25px;
-  
-}
 
 .sectionheadingContainer {
   display: flex;
@@ -32,6 +26,12 @@
   grid-gap: 2rem;
   width: 100%;
   margin-bottom: 2rem;
+}
+
+.secondBox {
+  border: 1px solid var(--white);
+  border-radius: 15px;
+  padding: 2rem;
 }
 
 .left {
@@ -97,4 +97,3 @@
     width: 100%;
   }
 }
-
