--- a/src/components/Process/Process.module.css
+++ b/src/components/Process/Process.module.css
@@ -1,9 +1,21 @@
 .container {
-  background: rgb(22,47,53);
-background: -moz-linear-gradient(180deg, rgba(22,47,53,1) 0%, rgba(127,98,243,1) 100%);
-background: -webkit-linear-gradient(180deg, rgba(22,47,53,1) 0%, rgba(127,98,243,1) 100%);
-background: linear-gradient(180deg, rgba(22,47,53,1) 0%, rgba(127,98,243,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#162f35",endColorstr="#7f62f3",GradientType=1);
+  background: rgb(22, 47, 53);
+  background: -moz-linear-gradient(
+    180deg,
+    rgba(22, 47, 53, 1) 0%,
+    rgba(127, 98, 243, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    180deg,
+    rgba(22, 47, 53, 1) 0%,
+    rgba(127, 98, 243, 1) 100%
+  );
+  background: linear-gradient(
+    180deg,
+    rgba(22, 47, 53, 1) 0%,
+    rgba(127, 98, 243, 1) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#162f35",endColorstr="#7f62f3",GradientType=1);
   padding-top: 10rem;
 }
 
@@ -78,7 +90,13 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#162f35",endCo
   background-color: var(--tan);
 }
 
-.card:nth-child(4) {
+.card:nth-child(1),
+.card:nth-child(2) {
+  border-bottom: 1px dashed var(--lightGray);
+}
+
+.card:nth-child(4),
+.card:nth-child(2) {
   border-right: none;
 }
 
@@ -108,6 +126,17 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#162f35",endCo
   color: var(--white);
   opacity: 0.7;
   font-size: 1.4rem;
+}
+
+@media screen and (max-width: 1568px) {
+  .bottom {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .card {
+    border-right: none;
+  }
 }
 
 @media screen and (max-width: 1068px) {
@@ -145,6 +174,11 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#162f35",endCo
     border-bottom: 1px dashed var(--lightGray);
   }
 
+  .card:nth-child(1),
+  .card:nth-child(3) {
+    border-right: 1px dashed var(--lightGray);
+
+  }
   .card:nth-child(3),
   .card:nth-child(4) {
     border-bottom: none;
