--- a/src/components/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/ProjectsSection/ProjectsSection.module.css
@@ -1,15 +1,16 @@
 .container {
   background-color: var(--white);
   padding-top: 10rem;
-  padding-bottom: 5rem;
+  padding-bottom: 10rem;
 }
 
 .top {
-  margin-bottom: 5rem;
-}
-
-.sectionHeadingContainer {
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 
 .heading span {
@@ -21,7 +22,7 @@
 
 .bottom {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   grid-gap: 1rem;
   overflow: hidden;
 }
@@ -71,17 +72,26 @@
 
 .imgContainer {
   position: relative;
-  width: 150px;
-  height: 150px;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
-  border: 1px solid var(--gray);
+  /* border: 1px solid var(--gray); */
   display: flex;
   align-items: center;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
   transition: all 0.2s ease-in;
-  /* margin-bottom: 3rem; */
+  /* height: 100%;
+  width: 100%; */
+  -webkit-mask-image: url(/icons/cog.svg);
+  mask-image: url(/icons/cog.svg);
+  -webkit-mask-position: 50% center;
+  mask-position: 50% center;
+  -webkit-mask-size: auto 100%;
+  mask-size: auto 100%;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
 }
 
 .img {
