--- a/src/components/ProjectSection3d/ProjectSection3d.module.css
+++ b/src/components/ProjectSection3d/ProjectSection3d.module.css
@@ -48,8 +48,20 @@
   width: 100vw;
   height: 100vh;
   z-index: -1;
+  cursor: grab;
+  pointer-events: auto;
 }
 
+/* Changed to correct class name */
+.sceneContainer:active {
+  cursor: grabbing;
+}
+
+/* Removed the pointer-events: none from children */
+/* This allows the click events to properly reach the element */
+.sceneContainer * {
+  pointer-events: auto;
+}
 
 @media screen and (max-width: 968px) {
   .copy,
