--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -24,7 +24,7 @@
 .primary {
   color: var(--white);
   background-color: var(--blue);
-  border: 2px dashed var(--blue);
+  border: 2px solid var(--white);
 }
 
 .primary:hover {
