--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -149,6 +149,7 @@
     top: 0px;
     grid-template-columns: repeat(1, 1fr);
     width: 100%;
+  
     transition: 0.3s all ease-in;
     z-index: 1000;
     padding: 2rem;
@@ -156,6 +157,7 @@
     background-color: var(--tan);
     transition: all 0.3s ease-in;
     border-bottom: 1px solid var(--blueBorder);
+    background-color: var(--blue);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.9);
     display: flex;
     flex-direction: column;
@@ -198,7 +200,12 @@
     width: 100%;
     padding: 2rem;
     padding-bottom: 1rem;
-    color: var(--black);
+    color: var(--white);
+  }
+
+  .btnContainer {
+    display: grid;
+    width: 100%;
   }
 
   .hamburger {
@@ -215,6 +222,7 @@
   .hamburger.active .whiteBar:nth-child(1) {
     -webkit-transform: translateY(0px) rotate(45deg);
     transform: translateY(12px) rotate(45deg);
+    background-color: var(--white);
   }
 
   .hamburger.active .whiteBar:nth-child(2) {
@@ -224,6 +232,7 @@
   .hamburger.active .whiteBar:nth-child(3) {
     -webkit-transform: translateY(0px) rotate(-45deg);
     transform: translateY(2px) rotate(-45deg);
+    background-color: var(--white);
   }
 
   .white {
