hover scaling fix

--- a/src/components/HeroDetails/HeroDetails.module.css
+++ b/src/components/HeroDetails/HeroDetails.module.css
@@ -24,10 +24,10 @@
   cursor: pointer;
 }
 
-.heading:hover {
+/* .heading:hover {
   transform: scale(1.4);
   color: #ff87c1;
-}
+} */
 
 
 .heading2 {
