--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  gap: 1rem;
   cursor: pointer;
 }
 
@@ -19,6 +20,8 @@
   color: var(--black);
   width: 2.7rem;
   height: 2.7rem;
+  transform-origin: center;
+  transition: transform 0.1s ease-out;
 }
 
 .iconLarge {
