--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,11 +53,11 @@ h5,
 h6,
 span {
   color: var(--black);
-  font-family: var(--NaNHoloCondensedBold);
+  font-family: var(--SamsungSharpSansBd);
 }
 
 h1 {
-  font-size: 7rem;
+  font-size: 8rem;
   line-height: 1;
   font-weight: 600;
 }
