--- a/src/components/HeroDetails/HeroDetails.module.css
+++ b/src/components/HeroDetails/HeroDetails.module.css
@@ -18,10 +18,11 @@
 .heading {
   color: #ffffff;       
   text-align: center;
-  font-size: 7rem;
+  font-size: 8rem;
   transform: scale(1);   
   transition: transform 0.3s ease, color 0.3s ease;
   cursor: pointer;
+  text-transform: lowercase;
 }
 
 /* .heading:hover {
